package edu.group10.backend.model.card;

/**
 * Lists the high-level categories used by the game rules.
 */
public enum CardType {
    PROPERTY,
    ACTION,
    RENT,
    MONEY,
    MULTI_PROPERTY
}
