package edu.group10.core.card.action;

import edu.group10.core.card.ActionCard;

public class HotelCard extends ActionCard {
    public HotelCard() {
        super("ACT_HOTEL", "Hotel", 4);
    }
}
