package edu.group10.core.card.action;

import edu.group10.core.card.ActionCard;

public class HouseCard extends ActionCard {
    public HouseCard() {
        super("ACT_HOUSE", "House", 3);
    }
}
