package edu.group10.core.card;

public class JustSayNoCard extends ActionCard {
    public JustSayNoCard() {
        super("ACT_JUST_SAY_NO", "Just Say No", 4);
    }
}
