package edu.group10.core.model;

public class Deck {
}
