@startuml
title Monopoly Deal

skinparam classAttributeIconSize 0

package "Frontend" {
  class MainView {
    + render(stateJson: String): void
    + onPlayCard(cardId: String): void
    + onDrawCard(): void
    + onDiscard(cardIds: List<String>): void
    + onEndTurn(): void
  }

  class ApiClient {
    + getState(): String
    + playCard(reqJson: String): String
    + drawCard(reqJson: String): String
    + discardCards(reqJson: String): String
    + endTurn(reqJson: String): String
  }

  class TurnSimulator {
    + simulateOneTurn(playerId: String): String
  }
}

package "Backend" {
  enum CardType {
    PROPERTY
    MONEY
    ACTION
  }

  enum ColorGroup {
    BROWN
    LIGHT_BLUE
    PINK
    ORANGE
    RED
    YELLOW
    GREEN
    DARK_BLUE
    RAILROAD
    UTILITY
    WILD
  }

  abstract class Card {
    - name: String
    - value: int
    - type: CardType
  }

  class PropertyCard {
    - color: ColorGroup
    - wild: boolean
  }

  class MoneyCard

  abstract class ActionCard {
    + play(game: Game, owner: Player): void
  }

  class RentCard
  class DoubleRentCard
  class SlyDealCard
  class ForcedDealCard
  class DealBreakerCard
  class HouseCard
  class HotelCard
  class JustSayNoCard

  class Player {
    - id: String
    - name: String
    - handCards: List<Card>
    - bankCards: List<Card>
    - propertySets: List<PropertySet>
  }

  class PropertySet {
    - color: ColorGroup
    - cards: List<PropertyCard>
    - completed: boolean
    + getRent(): int
  }

  class Deck {
    - drawPile: List<Card>
    - discardPile: List<Card>
    + draw(): Card
    + discard(card: Card): void
  }

  class Game {
    - players: List<Player>
    - deck: Deck
    - currentTurn: int
    - maxPlaysPerTurn: int = 3
    - handLimitAtTurnEnd: int = 7
    + start(): void
    + drawAtTurnStart(playerId: String): void
    + playCard(playerId: String, cardId: String): void
    + discardToLimit(playerId: String, cardIds: List<String>): void
    + nextTurn(): void
    + isGameOver(): boolean
  }

  class GameController {
    + handlePlayCard(playerId: String, cardId: String): void
    + handleDraw(playerId: String): void
    + handleDiscard(playerId: String, cardIds: List<String>): void
    + handleEndTurn(playerId: String): void
  }

  class GameHttpServer {
    + start(port: int): void
    + stop(): void
  }

  class GameApiHandler {
    + getState(): String
    + playCard(reqJson: String): String
    + drawCard(reqJson: String): String
    + discardCards(reqJson: String): String
    + endTurn(reqJson: String): String
  }
}

Card <|-- PropertyCard
Card <|-- MoneyCard
Card <|-- ActionCard

ActionCard <|-- RentCard
ActionCard <|-- DoubleRentCard
ActionCard <|-- SlyDealCard
ActionCard <|-- ForcedDealCard
ActionCard <|-- DealBreakerCard
ActionCard <|-- HouseCard
ActionCard <|-- HotelCard
ActionCard <|-- JustSayNoCard

Game "1" o-- "2..5" Player
Game "1" o-- "1" Deck
Player "1" o-- "*" Card : handCards
Player "1" o-- "*" Card : bankCards
Player "1" o-- "*" PropertySet
PropertySet "1" *-- "*" PropertyCard
Deck "1" *-- "*" Card
GameController ..> Game
ActionCard ..> Game
ActionCard ..> Player

MainView ..> ApiClient : HTTP/JSON
ApiClient ..> GameHttpServer : /api/*
GameHttpServer ..> GameApiHandler
GameApiHandler ..> GameController
TurnSimulator ..> MainView

@enduml
